# libgatt

./: .gitignore  Makefile.am  README.md  bootstrap
attrib/: utils.c
src/: att.c  att.h  bluetooth.c  btio.c  gatt.c  gatt.h  gattrib.c  hci.c  log.h  sdp.c  sdp.h  sdp_lib.h  test.c  utils.c  utils.h  uuid.c  uuid.h
